pandoc-eqnos 2.2.0 (unreleased)

    * Updated to work with pandoc 2.10.
    * Fixed equation number reset problem for html, docx (Issue #49).
    * Fixed "local variable 'ret' referenced before assignment"
      error (Issue #43).


pandoc-eqnos 2.1.1 (2019-09-26)

    * Warns about duplicate reference targets.


pandoc-eqnos 2.0.0 (2019-09-17)

    * A warnings system has been added.
    * Meta variable names have been updated.
    * TeX codes have been completely overhauled.
    * Html/epub equations are now enclosed in a `<div>`.
    * Epub support is generally improved.
    * Support for disabling links on selected references
      (pandoc-fignos Issue #54).
    * Enable section number offsets in equation numbers
      (pandoc-fignos Issue #47).
    * Better handling of missing references.
    * Changed `eqnos-number-sections` and `xnos-number-sections`
      options to `eqnos-number-by-section` and
      `xnos-number-by-section`


pandoc-eqnos 1.4.4 (2019-06-15)

    * For epub output, place equation number in own span (Issue #39).


pandoc-eqnos 1.4.3 (2019-05-17)

    * Improved epub output and refreshed epub demos.


pandoc-eqnos 1.4.2 (2019-05-16)

    * Fixed links in epub output (Issue #37).
    * Bug fix for equation numbering by section for docx
      (pandoc-fignos Issue #58).
    * `pandoc-eqnos --version` now gives the verson.


pandoc-eqnos 1.4.1 (2019-05-16)

    * Restored eqnos-eqref functionality (Issue #35).


pandoc-eqnos 1.4.0 (2019-05-15)

    * Support for references in bracketed spans (pandoc-fignos
      Issue #58).


pandoc-eqnos 1.3.2 (2019-05-15)

    * Enabled equation numbering by section for docx (addresses
      pandoc-fignos Issue #59).


pandoc-eqnos 1.3.1 (2019-05-08)

    * Maintenance release for pandoc 2.7.2.


pandoc-eqnos 1.3.0 (2018-08-09)

    * Require pandoc-xnos>=1.1,<2 to ensure API compatibility
      (pandoc-fignos Issue #46).
    * Gives more helpful error message regarding acceptable